--- a/environment.yaml
+++ b/environment.yaml
@@ -16,12 +16,13 @@ dependencies:
   - blas=1.0=openblas
   - brotlipy=0.7.0=py36h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.07.19=h06a4308_0
-  - certifi=2020.12.5=py36h06a4308_0
+  - ca-certificates=2022.9.24=ha878542_0
+  - cairo=1.14.12=h80bd089_1005
+  - certifi=2021.5.30=py36h5fab9bb_0
   - cffi=1.14.0=py36h2e261b9_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - clustalo=1.2.4=h4346872_0
-  - conda=4.10.3=py36h06a4308_0
+  - conda=4.10.3=py36h5fab9bb_2
   - conda-package-handling=1.6.1=py36h7b6447c_0
   - cryptography=3.1.1=py36h1ba5d50_0
   - curl=7.64.0=hbc83047_2
@@ -35,11 +36,15 @@ dependencies:
   - fasttree=2.1=hdfd2403_0
   - fontconfig=2.13.1=h6c09931_0
   - freetype=2.11.0=h70c0345_0
+  - genometools-genometools=1.5.10=py36h08a56e5_2
+  - gettext=0.19.8.1=hf34092f_1004
   - gh=2.16.1=ha8f183a_0
   - giflib=5.1.4=h14c3975_1
   - glib=2.56.2=hd408876_0
+  - graphite2=1.3.13=h58526e2_1001
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
+  - harfbuzz=1.9.0=he243708_1001
   - htslib=1.9=ha228f0b_7
   - icu=58.2=he6710b0_3
   - idna=3.3=pyhd3eb1b0_0
@@ -80,13 +85,15 @@ dependencies:
   - ncurses=6.1=he6710b0_1
   - numpy=1.19.5=py36hfc0c790_2
   - openblas=0.3.3=ha44fe06_1
-  - openssl=1.1.1q=h7f8727e_0
+  - openssl=1.1.1o=h166bdaf_0
   - paml=4.8=h48adae2_0
+  - pango=1.40.14=hf0c64fd_1003
   - parallel=20220222=ha770c72_0
   - pcre=8.45=h295c915_0
   - perl=5.26.2=h14c3975_0
   - phylobayes=4.1c=hac87e47_0
   - phyml=20160115.patched=hee5dff1_0
+  - pixman=0.34.0=h14c3975_1003
   - pmodeltest=1.4=py36h545a9a4_0
   - pybedtools=0.8.1=py36h5202f60_2
   - pycosat=0.6.3=py36h27cfd23_0
@@ -117,6 +124,15 @@ dependencies:
   - trimal=1.4=h87cb4c3_0
   - urllib3=1.26.8=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.2=h470a237_5
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h5eee18b_0
   - yaml=0.1.7=had09818_2
   - zlib=1.2.12=h5eee18b_3
